@@ -10,6 +10,8 @@ Release 1.4.0	[??? ??, 2009]
 Enhancements:
 	Added A* search algorithm (as heuristic_search);
 	Added Chow's and Euclidean heuristics for A*;
+	Added filtered depth-first and breadth-first search;
+	Added find filter (stops the search after reaching a target node); 
 	Moved to setuptools.
 
 Fixes:
